tests/NormalTests/paczka2/big_fuzzy/42372397.err
Error in line 1: bOKF9tQeO S415 75,0
Error in line 9: Mt4Y S415 84,4
Error in line 25: bOKF9tQeO A875 69,8
Error in line 29: bOKF9tQeO A91 99,6
Error in line 34: 1vw A91 65,7
Error in line 33: bOKF9tQeO S415 53,5
Error in line 42: bOKF9tQeO A91 59,9
Error in line 43: 1vw S415 91,2
Error in line 75: yLC S435 10,6
Error in line 73: Mt4Y A875 14,0
Error in line 77: yLC A875 96,0
Error in line 96: 1vw A875 47,4
Error in line 97: 1vw S435 84,3
Error in line 100: yLC S435 60,0
Error in line 101: 1vw S415 48,6
Error in line 109: 1vw A91 21,2
Error in line 108: S415 S435 99,1
Error in line 103: yLC A875 88,0
Error in line 118: 1Rw S435 45,5
Error in line 139: yLC A91 12,2
Error in line 133: Mt4Y S435 74,6
Error in line 141: Mt4Y S415 97,4
Error in line 137: 1Rw S415 41,9
Error in line 145: yLC S415 6,8
Error in line 149: yLC A91 34,2
Error in line 164: S415 S415 82,0
Error in line 168: S415 A91 18,5
Error in line 166: 1Rw S435 48,8
Error in line 182: PJoqOs7fTT A91 0,9
Error in line 189: yLC S435 97,2
Error in line 184: bOKF9tQeO A91 26,8
Error in line 197: bOKF9tQeO S435 78,4
Error in line 213: 1vw A875 -1,6
Error in line 204: S415 A91 95,6
Error in line 218: 1Rw S435 36,7
Error in line 227: Mt4Y S435 60,2
Error in line 231: bOKF9tQeO S415 42,2
Error in line 237: bOKF9tQeO A91 xx,x
Error in line 239: ?A87ÿ
Error in line 224: PJoqOs7fTT S415 20,0
Error in line 241: Mt4Y S415 89,9
